--- a/Views/Shared/Components/SideBar/Default.cshtml
+++ b/Views/Shared/Components/SideBar/Default.cshtml
@@ -6,20 +6,39 @@
         @foreach (var link in Model)
         {
             // Determine if the link is active
-            var linkPath = $"/Admin{link.Name}";
-            var isActive = linkPath.Equals(Context.Request.Path, StringComparison.OrdinalIgnoreCase);
-            var linkClasses = isActive || link.Name == "Dashboard" ? "bg-blue-500 text-white" : "text-gray-700 hover:bg-blue-400 hover:text-white";
-            var action =  link.Name == "Dashboard" ? "Index" : link.Name;
-            <section id="widget_2" class="mt-5 flex flex-col gap-5 ">
-                <div class="flex gap-2 items-center cursor-pointer @linkClasses rounded-md px-3 p-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
-                        <path fill="currentColor"
-                              d="m20 8-6-6H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zm-11 11H7v-9h2zm4 0h-2v-4h2zm4 0h-2v-6h2z">
-                        </path>
-                    </svg>
-                    <a asp-controller="@link.Controller" asp-action="@action" class="w-full">@link.Name</a>
-                </div>
-            </section>
+            if(link.Name == "Dashboard")
+            {
+                var linkPath = $"/Admin";
+                var isActive = linkPath.Equals(Context.Request.Path, StringComparison.OrdinalIgnoreCase);
+                var linkClasses = isActive ? "bg-blue-500 text-white" : "text-gray-700 hover:bg-blue-400 hover:text-white";
+                <section id="widget_2" class="mt-5 flex flex-col gap-5 ">
+                    <div class="flex gap-2 items-center cursor-pointer @linkClasses rounded-md px-3 p-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                  d="m20 8-6-6H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zm-11 11H7v-9h2zm4 0h-2v-4h2zm4 0h-2v-6h2z">
+                            </path>
+                        </svg>
+                        <a asp-controller="@link.Controller" asp-action="Index" class="w-full">@link.Name </a>
+                    </div>
+                </section>
+            }else
+            {
+                var linkPath = $"/Admin/{link.Name}";
+                var isActive = linkPath.Equals(Context.Request.Path, StringComparison.OrdinalIgnoreCase);
+                var linkClasses = isActive ? "bg-blue-500 text-white" : "text-gray-700 hover:bg-blue-400 hover:text-white";
+                var action = link.Name == "Dashboard" ? "Index" : link.Name;
+                <section id="widget_2" class="mt-5 flex flex-col gap-5 ">
+                    <div class="flex gap-2 items-center cursor-pointer @linkClasses rounded-md px-3 p-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                  d="m20 8-6-6H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zm-11 11H7v-9h2zm4 0h-2v-4h2zm4 0h-2v-6h2z">
+                            </path>
+                        </svg>
+                        <a asp-controller="@link.Controller" asp-action="@action" class="w-full">@link.Name </a>
+                    </div>
+                </section>
+            }
+            
         }
     </div>
 </aside>
