--- a/Views/Admin/Place.cshtml
+++ b/Views/Admin/Place.cshtml
@@ -6,3 +6,11 @@
 <div class="text-gray-700">
     <h1 class="text-xl font-semibold">Manage Places Here</h1>
 </div>
+
+
+<script>
+
+    $(document).ready(function () {
+       alert('asdsa')
+    });
+</script>
